--- a/index.html
+++ b/index.html
@@ -199,12 +199,34 @@
         @media (max-width: 768px) {
             .container {
                 flex-direction: column;
-                height: auto;
-                padding: 1rem;
+                height: 100vh;
+                padding: 0;
             }
 
             .editor-section, .preview-section {
-                min-height: 50vh;
+                flex: 1;
+                width: 100%;
+                min-height: unset;
+                height: 100%;
+            }
+
+            .preview-section {
+                position: fixed;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                z-index: 100;
+                display: none;
+            }
+
+            .preview-section.active {
+                display: flex;
+            }
+
+            .preview-toggle {
+                display: inline-flex !important; /* Force display on mobile */
+                margin-left: auto;
             }
         }
 
@@ -221,6 +243,10 @@
             max-width: 100%;
             height: auto;
         }
+
+        .preview-toggle {
+            display: none;
+        }
     </style>
 </head>
 <body>
@@ -229,6 +255,7 @@
             <div class="toolbar">
                 <button onclick="loadSampleText()">Load Sample</button>
                 <button onclick="clearText()">Clear</button>
+                <button onclick="togglePreview()" class="preview-toggle">Preview</button>
             </div>
             <textarea id="markdown-input" placeholder="Enter your Markdown here..." 
                       oninput="debounce(updatePreview, 150)()"></textarea>
@@ -440,6 +467,16 @@ function hello() {
 
         // Initial preview update
         updatePreview();
+
+        function togglePreview() {
+            const previewSection = document.querySelector('.preview-section');
+            previewSection.classList.toggle('active');
+            
+            // Update the preview when showing
+            if (previewSection.classList.contains('active')) {
+                updatePreview();
+            }
+        }
     </script>
 </body>
 </html>
